# re-visit

./: .gitignore  README.md  justfile  pyproject.toml
docs/: guide.md
revisit/: cli.py
revisit/commands/: add_command.py  check_command.py  delete_command.py  export_command.py  import_command.py  open_command.py  print_command.py  server_command.py  update_command.py  version_command.py
revisit/db/sqlite/: manager.py  repository.py
revisit/domain/: bookmark.py
revisit/handlers/: bookmark_handler.py  check_handler.py  io_handler.py
tests/: test_cli.py
web/: README.md  package.json  pnpm-lock.yaml
web/src/: App.tsx  main.tsx
web/src/components/: BookmarkCard.tsx  BookmarkForm.tsx  BookmarkList.tsx  ProtectedRoute.tsx  Sidebar.tsx  SplitView.tsx
web/src/contexts/: AuthContext.tsx  BookmarkContext.tsx
web/src/lib/: utils.ts
web/src/pages/: Bookmarks.tsx  SignIn.tsx
web/src/types/: index.ts
